--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,16 +1,23 @@
 [build]
-target = "thumbv6m-none-eabi"
+target = "thumbv6m-none-eabi" # Cortex-M0 and Cortex-M0+
 
 [target.thumbv6m-none-eabi]
-runner = "probe-run --chip RP2040"  # "elf2uf2-rs -d"
+runner = "probe-rs run --chip RP2040"
 rustflags = [
-    "-C", "link-arg=--nmagic",
-    "-C", "link-arg=-Tlink.x",
-    "-C", "link-arg=-Tlink-rp.x",
-    "-C", "link-arg=-Tdefmt.x",
-    "-C", "linker=flip-link",
-    "-C", "inline-threshold=5",
-    "-C", "no-vectorize-loops",
+    "-C",
+    "link-arg=--nmagic",
+    "-C",
+    "link-arg=-Tlink.x",
+    "-C",
+    "link-arg=-Tlink-rp.x",
+    "-C",
+    "link-arg=-Tdefmt.x",
+    "-C",
+    "linker=flip-link",
+    "-C",
+    "inline-threshold=5",
+    "-C",
+    "no-vectorize-loops",
 ]
 
 [env]
