--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,49 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-cortex-m-rt = "0.7.0"
+cortex-m = { version = "0.7.7", features = ["inline-asm"] }
+cortex-m-rt = "0.7.3"
 
-defmt = "0.3"
-defmt-rtt = "0.3"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
+defmt = "0.3.6"
+defmt-rtt = "0.4.0"
+panic-probe = { version = "0.3.1", features = ["print-defmt"] }
 
-embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
-embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
-embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
+embassy-executor = { version = "0.5.0", features = [
+    "defmt",
+    "integrated-timers",
+    "task-arena-size-32768",
+    "arch-cortex-m",
+    "executor-thread",
+    "executor-interrupt",
+] }
+embassy-time = { version = "0.3.0", features = [
+    "defmt",
+    "defmt-timestamp-uptime",
+] }
+embassy-rp = { version = "0.1.0", features = [
+    "defmt",
+    "unstable-pac",
+    "time-driver",
+    "critical-section-impl",
+] }
+
+
+# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
+# cortex-m-rt = "0.7.0"
+
+# defmt = "0.3"
+# defmt-rtt = "0.3"
+# panic-probe = { version = "0.3", features = ["print-defmt"] }
+
+# embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
+# embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
+#     "defmt",
+#     "defmt-timestamp-uptime",
+# ] }
+# embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
+#     "defmt",
+#     "unstable-traits",
+#     "nightly",
+#     "unstable-pac",
+#     "time-driver",
+# ] }
