--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,24 +29,42 @@ embassy-rp = { version = "0.1.0", features = [
     "time-driver",
     "critical-section-impl",
 ] }
+embassy-net = { version = "0.4.0", features = [
+    "defmt",
+    "tcp",
+    "udp",
+    "dhcpv4",
+    "medium-ethernet",
+] }
+cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
+cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
+static_cell = "2.0.0"
+portable-atomic = { version = "1.6.0", features = ["critical-section"] }
 
 
-# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-# cortex-m-rt = "0.7.0"
+# fixed = "1.23.1"
+# fixed-macro = "1.2"
 
-# defmt = "0.3"
-# defmt-rtt = "0.3"
-# panic-probe = { version = "0.3", features = ["print-defmt"] }
-
-# embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
-# embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
-#     "defmt",
-#     "defmt-timestamp-uptime",
+# futures = { version = "0.3.17", default-features = false, features = [
+#     "async-await",
+#     "cfg-target-has-atomic",
+#     "unstable",
 # ] }
-# embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
-#     "defmt",
-#     "unstable-traits",
-#     "nightly",
-#     "unstable-pac",
-#     "time-driver",
-# ] }
+# display-interface-spi = "0.4.1"
+# embedded-graphics = "0.7.1"
+# st7789 = "0.6.1"
+# display-interface = "0.4.1"
+# byte-slice-cast = { version = "1.2.0", default-features = false }
+# smart-leds = "0.3.0"
+# heapless = "0.8"
+# usbd-hid = "0.7.0"
+
+# embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
+# embedded-hal-async = "1.0"
+# embedded-hal-bus = { version = "0.1", features = ["async"] }
+# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
+# embedded-storage = { version = "0.3" }
+# log = "0.4"
+# pio-proc = "0.2"
+# pio = "0.2.1"
+# rand = { version = "0.8.5", default-features = false }
